# ...

./: .gitignore  .tmux.conf-grid  Dockerfile  README.md  build  disutils.pkg  install  install-via-ansible  layout  manifest  manifest.cfg  manifest.py  manifest.yml  mysetup.yml  pyproject.toml
HOME/: .bashrc  .distutils.pkgs  .expand-aka  .expand-alias  .gitconfig  .gitconfig-ssh  .gitconfig-work  .shell-aliases  .shell-completions  .shell-exports  .tmux.conf  .zsh_plugins.txt  .zshrc
HOME/.claude/: settings.json
HOME/.config/aka/: aka.yml
HOME/.config/clone/: clone.cfg
HOME/.config/kat/: go.yml  java.yml  json.yml  make.yml  python.yml  rust.yml  shell.yml  toml.yml  web.yml  yaml.yml  zsh.yml
HOME/.config/layout/: mint-3840x2160.yml
HOME/.config/rmrf/: rmrf.cfg
HOME/.config/tmp/: tmp.yml
HOME/.local/share/applications/: Obsidian.desktop
HOME/.shell-exports.d/: keys.env  mise.env  nvidia.env  rust.env
HOME/.ssh/: config
HOME/.vim/syntax/: ragel.vim
root/etc/: motd
root/etc/ssh/: ssh_config
root/home/USER/: .bash_aliases  .bash_functions  .bash_prompt  .bashrc  .expand-alias  .expand-alias-accept-line  .gitconfig  .invtool.conf  .oh-my-zsh  .shell-aliases  .shell-exports  .shell-functions  .shell_aliases  .ssh-ident  .tmux.conf  .vimrc  .zshrc
root/home/USER/.aws/cli/: alias
root/home/USER/.clone/: clone.cfg
root/home/USER/.gnupg/: gpg.conf
root/home/USER/.ssh/: config
root/home/saidler/: .bash_aliases  .bashrc  .git-prompt.sh  .icinga.html  .ssh-ident  .vimrc
root/home/saidler/.clone/: clone.cfg
root/home/saidler/.ssh/: config
(+7 files in other folders)
