[project]
name = "manifest"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott A. Idler",email = "scott.a.idler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "leatherman (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
